[package]
name = "freetrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = { version = "1.0.164", features = ["derive"] }
time = { version = "0.3.22", features = ["serde", "parsing"] }
